Closed Bug 192300 Opened 23 years ago Closed 23 years ago

nsICODecoder never calls OnDataAvailable() like the other decoders do

Categories

(Core :: Graphics: ImageLib, defect, P3)

x86
Windows 2000
defect

Tracking

()

RESOLVED FIXED
mozilla1.4alpha

People

(Reporter: kinmoz, Assigned: kinmoz)

Details

Attachments

(1 file)

nsICODecoder never calls OnDataAvailable() like the other decoders do. This leads to repaint problems when the reflow an inserted image element (who's src is an icon) happens before the image data is completely loaded. This was first noticed by one of our embedding customers. They were inserting an icon image into Composer content and were seeing that the icons never showed up until you forced the content area to repaint or caused an expose by bringing a window in front of the area needing a repaint and moving it away.
Attached patch Patch Rev 1Splinter Review
Status: NEW → ASSIGNED
Priority: -- → P3
Target Milestone: --- → mozilla1.4alpha
Attachment #113828 - Flags: review?(pavlov)
Comment on attachment 113828 [details] [diff] [review] Patch Rev 1 r=pavlov
Attachment #113828 - Flags: review?(pavlov) → review+
Attachment #113828 - Flags: superreview?(tor)
Comment on attachment 113828 [details] [diff] [review] Patch Rev 1 sr=tor
Attachment #113828 - Flags: superreview?(tor) → superreview+
Fix checked into TRUNK: mozilla/modules/libpr0n/decoders/bmp/nsICODecoder.cpp revision 1.26
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Keywords: nsbeta1+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: