Fix for bug 192300: nsICODecoder never calls OnDataAvailable() like the other decoders do

Modified nsICODecoder::SetImageData() to call mObserver->OnDataAvailable() like the other decoders do so that the image frame knows it can invalidate the area it occupies.

r=pavlov@netscape.com  sr=tor@acm.org